test/mutation_analysis/s0299_bulls_and_cows/hafis/o3/mutants/2/result.txt
./test/mutation_analysis/s0299_bulls_and_cows/hafis/o3/mutants/2/Solution.java:21: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
